--- a/sample_user_config.json
+++ b/sample_user_config.json
@@ -3,7 +3,10 @@
         "pid": "0x0001",
         "vid": "0x46f4",
         "sn": "1234XXX123",
-        "mac1": "XXYYXXYYXXYY"
+        "mac1": "XXYYXXYYXXYY",
+        "DiskIdxMap": "00",
+        "SataPortMap": "1",
+        "SasIdxMap": "00"
     },
     "synoinfo": {},
     "ramdisk_copy": {},
