--- a/.github/workflows/wwptest.yml
+++ b/.github/workflows/wwptest.yml
@@ -86,7 +86,7 @@ jobs:
           ./redpill_tool_chain.sh add 'https://raw.githubusercontent.com/pocopico/rp-ext/master/vmxnet3/rpext-index.json'
           ./redpill_tool_chain.sh add 'https://raw.githubusercontent.com/pocopico/rp-ext/master/e1000e/rpext-index.json'
           ./redpill_tool_chain.sh add 'https://raw.githubusercontent.com/pocopico/rp-ext/master/e1000/rpext-index.json'
-          ./redpill_tool_chain.shh add 'https://raw.githubusercontent.com/pocopico/rp-ext/master/mpt2sas/rpext-index.json'
+          ./redpill_tool_chain.sh add 'https://raw.githubusercontent.com/pocopico/rp-ext/master/mpt2sas/rpext-index.json'
 
           
           
